# fem

./: .gitignore  CMakeLists.txt  Constants.h  Element.h  Grid.cpp  Grid.h  JacobianMatrix.cpp  main.cpp
Headers/: Element.h  Grid.h  Helpers.h  JacobianMatrix.h  MainWindow.h  Node.h  Point.h  Result.h  ResultsModel.h  Solver.h
Sources/: Element.cpp  Grid.cpp  MainWindow.cpp  Result.cpp  ResultsModel.cpp  Solver.cpp
UI/: MainWindow.ui
indata/: indata  indata-description  test  test2
